--- a/android/res/values-cs/strings.xml
+++ b/android/res/values-cs/strings.xml
@@ -1118,17 +1118,17 @@
 	<string name="onboarding_welcome_agree">Spuštěním aplikace souhlasíte s podmínkami použití a zásadami ochrany osobních údajů.</string>
 	<string name="button_accept_and_continue">Přijmout a pokračovat</string>
 	<string name="button_learn_more">Zjistit více</string>
-	<string name="onboarding_not_storage_permission_title">Povolit přístup</string>
-	<string name="onboarding_not_storage_permission_message">Změňte nastavení oprávnění ve vašem zařízení. MAPS.ME vyžaduje přístup k úložišti.</string>
+	<string name="onboarding_storage_permissions_title">Povolit přístup</string>
+	<string name="onboarding_storage_permissions_message">Změňte nastavení oprávnění ve vašem zařízení. MAPS.ME vyžaduje přístup k úložišti.</string>
 	<string name="button_exit">Ukončit</string>
-	<string name="onboarding_learn_more_title">MAPS.ME vyžaduje přístup k</string>
+	<string name="onboarding_detail_permissions_title">MAPS.ME vyžaduje přístup k</string>
 	<!-- Default permission's name from Android settings. -->
-	<string name="onboarding_learn_more_storage">Úložišti</string>
-	<string name="onboarding_learn_more_storage_message">Umožní to stahování a používání offline map a ukládání záložek.</string>
+	<string name="onboarding_detail_permissions_storage_title">Úložišti</string>
+	<string name="onboarding_detail_permissions_storage_message">Umožní to stahování a používání offline map a ukládání záložek.</string>
 	<!-- Default permission's name from Android settings. -->
-	<string name="onboarding_location">Určení polohy</string>
-	<string name="onboarding_learn_more_location_message">Umožní to zobrazení míst a dopravy ve vaší blízkosti a použití navigace.</string>
-	<string name="onboarding_learn_more_save_maps_message">Můžete také změnit cílové umístění pro stažené mapy v nastavení.</string>
+	<string name="onboarding_detail_permissions_location_title">Určení polohy</string>
+	<string name="onboarding_detail_permissions_location_message">Umožní to zobrazení míst a dopravy ve vaší blízkosti a použití navigace.</string>
+	<string name="onboarding_detail_permissions_storage_path_message">Můžete také změnit cílové umístění pro stažené mapy v nastavení.</string>
 	<string name="settings_device_memory">Paměť zařízení</string>
 	<string name="settings_card_memory">Paměťovou kartu</string>
 	<string name="settings_storage_available">%s k dispozici</string>
