--- a/android/res/values-fi/strings.xml
+++ b/android/res/values-fi/strings.xml
@@ -1111,17 +1111,17 @@
 	<string name="onboarding_welcome_agree">Käynnistämällä sovelluksen hyväksyt käyttöehdot ja tietosuojakäytännön.</string>
 	<string name="button_accept_and_continue">Hyväksy ja jatka</string>
 	<string name="button_learn_more">Lisätietoja</string>
-	<string name="onboarding_not_storage_permission_title">Myönnä käyttöoikeus</string>
-	<string name="onboarding_not_storage_permission_message">Muuta laitteesi käyttöoikeusasetuksia. MAPS:ME:n käyttö edellyttää tallennustilan käyttöoikeutta.</string>
+	<string name="onboarding_storage_permissions_title">Myönnä käyttöoikeus</string>
+	<string name="onboarding_storage_permissions_message">Muuta laitteesi käyttöoikeusasetuksia. MAPS:ME:n käyttö edellyttää tallennustilan käyttöoikeutta.</string>
 	<string name="button_exit">Poistu</string>
-	<string name="onboarding_learn_more_title">MAPS.ME tarvitsee seuraavat käyttöoikeudet:</string>
+	<string name="onboarding_detail_permissions_title">MAPS.ME tarvitsee seuraavat käyttöoikeudet:</string>
 	<!-- Default permission's name from Android settings. -->
-	<string name="onboarding_learn_more_storage">Tallennustila</string>
-	<string name="onboarding_learn_more_storage_message">Jotta voisit tallentaa ja käyttää ladattuja karttoja offline-tilassa sekä tallentaa kirjanmerkkejä.</string>
+	<string name="onboarding_detail_permissions_storage_title">Tallennustila</string>
+	<string name="onboarding_detail_permissions_storage_message">Jotta voisit tallentaa ja käyttää ladattuja karttoja offline-tilassa sekä tallentaa kirjanmerkkejä.</string>
 	<!-- Default permission's name from Android settings. -->
-	<string name="onboarding_location">Sijainti</string>
-	<string name="onboarding_learn_more_location_message">Jotta voisit nähdä lähistöllä olevia paikkoja ja liikenteen sekä käyttää navigointia.</string>
-	<string name="onboarding_learn_more_save_maps_message">Voit myös muuttaa ladattujen karttojen tallennuskohteen asetuksissa.</string>
+	<string name="onboarding_detail_permissions_location_title">Sijainti</string>
+	<string name="onboarding_detail_permissions_location_message">Jotta voisit nähdä lähistöllä olevia paikkoja ja liikenteen sekä käyttää navigointia.</string>
+	<string name="onboarding_detail_permissions_storage_path_message">Voit myös muuttaa ladattujen karttojen tallennuskohteen asetuksissa.</string>
 	<string name="settings_device_memory">Laitteen muisti</string>
 	<string name="settings_card_memory">Muistkortti</string>
 	<string name="settings_storage_available">%s käytettävissä</string>
