--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -1132,17 +1132,17 @@
 	<string name="onboarding_welcome_agree">Запуская приложение, вы соглашаетесь с условиями использования и политикой конфиденциальности.</string>
 	<string name="button_accept_and_continue">Принять и продолжить</string>
 	<string name="button_learn_more">Подробнее</string>
-	<string name="onboarding_not_storage_permission_title">Предоставьте доступ</string>
-	<string name="onboarding_not_storage_permission_message">Предоставьте MAPS.ME доступ к памяти в настройках вашего устройства, иначе использовать MAPS.ME будет невозможно.</string>
+	<string name="onboarding_storage_permissions_title">Предоставьте доступ</string>
+	<string name="onboarding_storage_permissions_message">Предоставьте MAPS.ME доступ к памяти в настройках вашего устройства, иначе использовать MAPS.ME будет невозможно.</string>
 	<string name="button_exit">Выход</string>
-	<string name="onboarding_learn_more_title">MAPS.ME нужен доступ к</string>
+	<string name="onboarding_detail_permissions_title">MAPS.ME нужен доступ к</string>
 	<!-- Default permission's name from Android settings. -->
-	<string name="onboarding_learn_more_storage">Память</string>
-	<string name="onboarding_learn_more_storage_message">Чтобы сохранять и использовать скачанные карты и сохранять метки.</string>
+	<string name="onboarding_detail_permissions_storage_title">Память</string>
+	<string name="onboarding_detail_permissions_storage_message">Чтобы сохранять и использовать скачанные карты и сохранять метки.</string>
 	<!-- Default permission's name from Android settings. -->
-	<string name="onboarding_location">Местоположение</string>
-	<string name="onboarding_learn_more_location_message">Чтобы смотреть места и пробки рядом с вами и пользоваться навигацией.</string>
-	<string name="onboarding_learn_more_save_maps_message">В настройках можно изменить место хранения загруженных карт.</string>
+	<string name="onboarding_detail_permissions_location_title">Местоположение</string>
+	<string name="onboarding_detail_permissions_location_message">Чтобы смотреть места и пробки рядом с вами и пользоваться навигацией.</string>
+	<string name="onboarding_detail_permissions_storage_path_message">В настройках можно изменить место хранения загруженных карт.</string>
 	<string name="settings_device_memory">Память устроства</string>
 	<string name="settings_card_memory">Карта памяти</string>
 	<string name="settings_storage_available">%s доступно</string>
