--- a/android/res/values-nb/strings.xml
+++ b/android/res/values-nb/strings.xml
@@ -1109,17 +1109,17 @@
 	<string name="onboarding_welcome_agree">Ved å starte programmet samtykker du til brukervilkårene og reglene for personvern.</string>
 	<string name="button_accept_and_continue">Godta og fortsett</string>
 	<string name="button_learn_more">Finn ut mer</string>
-	<string name="onboarding_not_storage_permission_title">Gi tilgang</string>
-	<string name="onboarding_not_storage_permission_message">Endre innstillinger for tillatelser på enheten din. Det er nødvendig med tilgang til minnet for å kunne bruke MAPS.ME.</string>
+	<string name="onboarding_storage_permissions_title">Gi tilgang</string>
+	<string name="onboarding_storage_permissions_message">Endre innstillinger for tillatelser på enheten din. Det er nødvendig med tilgang til minnet for å kunne bruke MAPS.ME.</string>
 	<string name="button_exit">Avslutt</string>
-	<string name="onboarding_learn_more_title">MAPS.ME trenger tilgang til</string>
+	<string name="onboarding_detail_permissions_title">MAPS.ME trenger tilgang til</string>
 	<!-- Default permission's name from Android settings. -->
-	<string name="onboarding_learn_more_storage">Minnet</string>
-	<string name="onboarding_learn_more_storage_message">For å lagre og bruke nedlastede kart offline og lagre bokmerker.</string>
+	<string name="onboarding_detail_permissions_storage_title">Minnet</string>
+	<string name="onboarding_detail_permissions_storage_message">For å lagre og bruke nedlastede kart offline og lagre bokmerker.</string>
 	<!-- Default permission's name from Android settings. -->
-	<string name="onboarding_location">Plassering</string>
-	<string name="onboarding_learn_more_location_message">For å se steder og trafikk nær deg og bruke navigasjon.</string>
-	<string name="onboarding_learn_more_save_maps_message">Du kan også endre destinasjon for nedlastede kart under innstillinger.</string>
+	<string name="onboarding_detail_permissions_location_title">Plassering</string>
+	<string name="onboarding_detail_permissions_location_message">For å se steder og trafikk nær deg og bruke navigasjon.</string>
+	<string name="onboarding_detail_permissions_storage_path_message">Du kan også endre destinasjon for nedlastede kart under innstillinger.</string>
 	<string name="settings_device_memory">Enhetsminnet</string>
 	<string name="settings_card_memory">Minnekort</string>
 	<string name="settings_storage_available">%s tilgjengelig</string>
