--- a/android/res/values-ro/strings.xml
+++ b/android/res/values-ro/strings.xml
@@ -1107,17 +1107,17 @@
 	<string name="onboarding_welcome_agree">Dacă lansați aplicația, confirmați că sunteți de acord cu Condițiile de utilizare și Politica de confidențialitate.</string>
 	<string name="button_accept_and_continue">Acceptare și continuare</string>
 	<string name="button_learn_more">Aflați mai multe</string>
-	<string name="onboarding_not_storage_permission_title">Acordați acces</string>
-	<string name="onboarding_not_storage_permission_message">Schimbați setările permisiunilor de pe dispozitiv. Pentru a utiliza MAPS.ME este nevoie de acces la spațiul de stocare.</string>
+	<string name="onboarding_storage_permissions_title">Acordați acces</string>
+	<string name="onboarding_storage_permissions_message">Schimbați setările permisiunilor de pe dispozitiv. Pentru a utiliza MAPS.ME este nevoie de acces la spațiul de stocare.</string>
 	<string name="button_exit">Ieșire</string>
-	<string name="onboarding_learn_more_title">MAPS.ME necesită acces la</string>
+	<string name="onboarding_detail_permissions_title">MAPS.ME necesită acces la</string>
 	<!-- Default permission's name from Android settings. -->
-	<string name="onboarding_learn_more_storage">Stocare</string>
-	<string name="onboarding_learn_more_storage_message">Pentru a salva și a utiliza offline hărțile descărcate și pentru a salva semne de carte.</string>
+	<string name="onboarding_detail_permissions_storage_title">Stocare</string>
+	<string name="onboarding_detail_permissions_storage_message">Pentru a salva și a utiliza offline hărțile descărcate și pentru a salva semne de carte.</string>
 	<!-- Default permission's name from Android settings. -->
-	<string name="onboarding_location">Locație</string>
-	<string name="onboarding_learn_more_location_message">Pentru a vedea locurile și traficul din apropiere și a utiliza navigația.</string>
-	<string name="onboarding_learn_more_save_maps_message">Puteți, de asemenea, să schimbați destinația hărților descărcate din setări.</string>
+	<string name="onboarding_detail_permissions_location_title">Locație</string>
+	<string name="onboarding_detail_permissions_location_message">Pentru a vedea locurile și traficul din apropiere și a utiliza navigația.</string>
+	<string name="onboarding_detail_permissions_storage_path_message">Puteți, de asemenea, să schimbați destinația hărților descărcate din setări.</string>
 	<string name="settings_device_memory">Memoria dispozitivului</string>
 	<string name="settings_card_memory">Card</string>
 	<string name="settings_storage_available">%s disponibil</string>
