--- a/iphone/Maps/LocalizedStrings/es.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/es.lproj/Localizable.strings
@@ -1336,22 +1336,6 @@
 
 "onboarding_permissions_message" = "Así podrá descargar mapas, ver lugares y el estado de tráfico en su zona y utilizar navegación.";
 
-"onboarding_storage_permissions_title" = "Grant access";
-
-"onboarding_storage_permissions_message" = "Change permissions settings in your device. Needs a storage access to use MAPS.ME.";
-
-"onboarding_detail_permissions_title" = "MAPS.ME needs access to";
-
-"onboarding_detail_permissions_storage_title" = "Storage";
-
-"onboarding_detail_permissions_storage_message" = "To save and use downloaded maps offline and save bookmarks.";
-
-"onboarding_detail_permissions_location_title" = "Location";
-
-"onboarding_detail_permissions_location_message" = "To see places and traffic near you and use navigation.";
-
-"onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
-
 "onboarding_welcome_title" = "Bienvenido a MAPS.ME";
 
 "onboarding_welcome_first_subtitle" = "Mapas gratuitos, rápidos y detallados sin conexión a internet y con navegación paso a paso.";
@@ -1961,25 +1945,25 @@
 
 "button_learn_more" = "Leer más";
 
-"onboarding_not_storage_permission_title" = "Otorgar acceso";
+"onboarding_storage_permissions_title" = "Otorgar acceso";
 
-"onboarding_not_storage_permission_message" = "Cambie la configuración de permisos en su dispositivo. MAPS.ME necesita tener acceso al almacenamiento.";
+"onboarding_storage_permissions_message" = "Cambie la configuración de permisos en su dispositivo. MAPS.ME necesita tener acceso al almacenamiento.";
 
 "button_exit" = "Salir";
 
-"onboarding_learn_more_title" = "MAPS.ME necesita tener acceso a";
+"onboarding_detail_permissions_title" = "MAPS.ME necesita tener acceso a";
 
 /* Default permission's name from Android settings. */
-"onboarding_learn_more_storage" = "Almacenamiento";
+"onboarding_detail_permissions_storage_title" = "Almacenamiento";
 
-"onboarding_learn_more_storage_message" = "Para guardar y utilizar mapas descargados en línea, así como guardar marcadores.";
+"onboarding_detail_permissions_storage_message" = "Para guardar y utilizar mapas descargados en línea, así como guardar marcadores.";
 
 /* Default permission's name from Android settings. */
-"onboarding_location" = "Ubicación";
+"onboarding_detail_permissions_location_title" = "Ubicación";
 
-"onboarding_learn_more_location_message" = "Para ver lugares y el estado de tráfico en su zona, y utilizar navegación.";
+"onboarding_detail_permissions_location_message" = "Para ver lugares y el estado de tráfico en su zona, y utilizar navegación.";
 
-"onboarding_learn_more_save_maps_message" = "También puede cambiar en los ajustes el destino para los mapas descargados.";
+"onboarding_detail_permissions_storage_path_message" = "También puede cambiar en los ajustes el destino para los mapas descargados.";
 
 "settings_device_memory" = "Memoria del dispositivo";
 
