--- a/iphone/Maps/LocalizedStrings/fi.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fi.lproj/Localizable.strings
@@ -1336,22 +1336,6 @@
 
 "onboarding_permissions_message" = "Jotta voisit ladata karttoja, nähdä lähistöllä olevat paikan ja liikenteen sekä käyttää navigointia.";
 
-"onboarding_storage_permissions_title" = "Grant access";
-
-"onboarding_storage_permissions_message" = "Change permissions settings in your device. Needs a storage access to use MAPS.ME.";
-
-"onboarding_detail_permissions_title" = "MAPS.ME needs access to";
-
-"onboarding_detail_permissions_storage_title" = "Storage";
-
-"onboarding_detail_permissions_storage_message" = "To save and use downloaded maps offline and save bookmarks.";
-
-"onboarding_detail_permissions_location_title" = "Location";
-
-"onboarding_detail_permissions_location_message" = "To see places and traffic near you and use navigation.";
-
-"onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
-
 "onboarding_welcome_title" = "Tervetuloa käyttämään MAPS.ME:tä";
 
 "onboarding_welcome_first_subtitle" = "Ilmaiset, nopeat, yksityiskohtaiset ja offline-tilassa täysin toimivat kartat käännös käännökseltä -navigoinnilla.";
@@ -1961,25 +1945,25 @@
 
 "button_learn_more" = "Lisätietoja";
 
-"onboarding_not_storage_permission_title" = "Myönnä käyttöoikeus";
+"onboarding_storage_permissions_title" = "Myönnä käyttöoikeus";
 
-"onboarding_not_storage_permission_message" = "Muuta laitteesi käyttöoikeusasetuksia. MAPS:ME:n käyttö edellyttää tallennustilan käyttöoikeutta.";
+"onboarding_storage_permissions_message" = "Muuta laitteesi käyttöoikeusasetuksia. MAPS:ME:n käyttö edellyttää tallennustilan käyttöoikeutta.";
 
 "button_exit" = "Poistu";
 
-"onboarding_learn_more_title" = "MAPS.ME tarvitsee seuraavat käyttöoikeudet:";
+"onboarding_detail_permissions_title" = "MAPS.ME tarvitsee seuraavat käyttöoikeudet:";
 
 /* Default permission's name from Android settings. */
-"onboarding_learn_more_storage" = "Tallennustila";
+"onboarding_detail_permissions_storage_title" = "Tallennustila";
 
-"onboarding_learn_more_storage_message" = "Jotta voisit tallentaa ja käyttää ladattuja karttoja offline-tilassa sekä tallentaa kirjanmerkkejä.";
+"onboarding_detail_permissions_storage_message" = "Jotta voisit tallentaa ja käyttää ladattuja karttoja offline-tilassa sekä tallentaa kirjanmerkkejä.";
 
 /* Default permission's name from Android settings. */
-"onboarding_location" = "Sijainti";
+"onboarding_detail_permissions_location_title" = "Sijainti";
 
-"onboarding_learn_more_location_message" = "Jotta voisit nähdä lähistöllä olevia paikkoja ja liikenteen sekä käyttää navigointia.";
+"onboarding_detail_permissions_location_message" = "Jotta voisit nähdä lähistöllä olevia paikkoja ja liikenteen sekä käyttää navigointia.";
 
-"onboarding_learn_more_save_maps_message" = "Voit myös muuttaa ladattujen karttojen tallennuskohteen asetuksissa.";
+"onboarding_detail_permissions_storage_path_message" = "Voit myös muuttaa ladattujen karttojen tallennuskohteen asetuksissa.";
 
 "settings_device_memory" = "Laitteen muisti";
 
