--- a/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
@@ -1336,22 +1336,6 @@
 
 "onboarding_permissions_message" = "따라서 지도를 다운로드하고, 근처의 장소와 교통 상황을 보고, 네비게이션을 사용할 수 있습니다.";
 
-"onboarding_storage_permissions_title" = "Grant access";
-
-"onboarding_storage_permissions_message" = "Change permissions settings in your device. Needs a storage access to use MAPS.ME.";
-
-"onboarding_detail_permissions_title" = "MAPS.ME needs access to";
-
-"onboarding_detail_permissions_storage_title" = "Storage";
-
-"onboarding_detail_permissions_storage_message" = "To save and use downloaded maps offline and save bookmarks.";
-
-"onboarding_detail_permissions_location_title" = "Location";
-
-"onboarding_detail_permissions_location_message" = "To see places and traffic near you and use navigation.";
-
-"onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
-
 "onboarding_welcome_title" = "MAPS.ME입니다.";
 
 "onboarding_welcome_first_subtitle" = "턴-바이-턴 네비게이션을 이용하는 빠르고 상세하며 완전히 오프라인으로 이용 가능한 무료 지도입니다.";
@@ -1961,25 +1945,25 @@
 
 "button_learn_more" = "자세히 알아보기";
 
-"onboarding_not_storage_permission_title" = "액세스 승인";
+"onboarding_storage_permissions_title" = "액세스 승인";
 
-"onboarding_not_storage_permission_message" = "장치에서 권한 설정을 변경하세요. MAPS.ME를 사용하려면 저장소 액세스가 필요합니다.";
+"onboarding_storage_permissions_message" = "장치에서 권한 설정을 변경하세요. MAPS.ME를 사용하려면 저장소 액세스가 필요합니다.";
 
 "button_exit" = "끝내기";
 
-"onboarding_learn_more_title" = "MAPS.ME에는 다음에 대한 액세스가 필요합니다:";
+"onboarding_detail_permissions_title" = "MAPS.ME에는 다음에 대한 액세스가 필요합니다:";
 
 /* Default permission's name from Android settings. */
-"onboarding_learn_more_storage" = "저장소";
+"onboarding_detail_permissions_storage_title" = "저장소";
 
-"onboarding_learn_more_storage_message" = "오프라인으로 지도를 저장 및 사용하고 책갈피를 저장하기 위한 것입니다.";
+"onboarding_detail_permissions_storage_message" = "오프라인으로 지도를 저장 및 사용하고 책갈피를 저장하기 위한 것입니다.";
 
 /* Default permission's name from Android settings. */
-"onboarding_location" = "위치";
+"onboarding_detail_permissions_location_title" = "위치";
 
-"onboarding_learn_more_location_message" = "근처의 장소와 교통 상황을 보고 네비게이션을 사용하기 위한 것입니다.";
+"onboarding_detail_permissions_location_message" = "근처의 장소와 교통 상황을 보고 네비게이션을 사용하기 위한 것입니다.";
 
-"onboarding_learn_more_save_maps_message" = "설정에서 다운로드한 지도에 대한 목적지를 변경할 수도 있습니다.";
+"onboarding_detail_permissions_storage_path_message" = "설정에서 다운로드한 지도에 대한 목적지를 변경할 수도 있습니다.";
 
 "settings_device_memory" = "장치 메모리";
 
