--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -1336,22 +1336,6 @@
 
 "onboarding_permissions_message" = "Чтобы скачивать карты, смотреть места вокруг вас и пользоваться навигацией.";
 
-"onboarding_storage_permissions_title" = "Grant access";
-
-"onboarding_storage_permissions_message" = "Change permissions settings in your device. Needs a storage access to use MAPS.ME.";
-
-"onboarding_detail_permissions_title" = "MAPS.ME needs access to";
-
-"onboarding_detail_permissions_storage_title" = "Storage";
-
-"onboarding_detail_permissions_storage_message" = "To save and use downloaded maps offline and save bookmarks.";
-
-"onboarding_detail_permissions_location_title" = "Location";
-
-"onboarding_detail_permissions_location_message" = "To see places and traffic near you and use navigation.";
-
-"onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
-
 "onboarding_welcome_title" = "Добро пожаловать в MAPS.ME";
 
 "onboarding_welcome_first_subtitle" = "Бесплатные, быстрые, подробные и полностью автономные карты с пошаговой навигацией.";
@@ -1961,25 +1945,25 @@
 
 "button_learn_more" = "Подробнее";
 
-"onboarding_not_storage_permission_title" = "Предоставьте доступ";
+"onboarding_storage_permissions_title" = "Предоставьте доступ";
 
-"onboarding_not_storage_permission_message" = "Предоставьте MAPS.ME доступ к памяти в настройках вашего устройства, иначе использовать MAPS.ME будет невозможно.";
+"onboarding_storage_permissions_message" = "Предоставьте MAPS.ME доступ к памяти в настройках вашего устройства, иначе использовать MAPS.ME будет невозможно.";
 
 "button_exit" = "Выход";
 
-"onboarding_learn_more_title" = "MAPS.ME нужен доступ к";
+"onboarding_detail_permissions_title" = "MAPS.ME нужен доступ к";
 
 /* Default permission's name from Android settings. */
-"onboarding_learn_more_storage" = "Память";
+"onboarding_detail_permissions_storage_title" = "Память";
 
-"onboarding_learn_more_storage_message" = "Чтобы сохранять и использовать скачанные карты и сохранять метки.";
+"onboarding_detail_permissions_storage_message" = "Чтобы сохранять и использовать скачанные карты и сохранять метки.";
 
 /* Default permission's name from Android settings. */
-"onboarding_location" = "Местоположение";
+"onboarding_detail_permissions_location_title" = "Местоположение";
 
-"onboarding_learn_more_location_message" = "Чтобы смотреть места и пробки рядом с вами и пользоваться навигацией.";
+"onboarding_detail_permissions_location_message" = "Чтобы смотреть места и пробки рядом с вами и пользоваться навигацией.";
 
-"onboarding_learn_more_save_maps_message" = "В настройках можно изменить место хранения загруженных карт.";
+"onboarding_detail_permissions_storage_path_message" = "В настройках можно изменить место хранения загруженных карт.";
 
 "settings_device_memory" = "Память устроства";
 
